# pro_image_editor

./: README.md  SNAPPING_API.md  SNAPPING_FEATURE.md  mkdocs.yml  pyproject.toml
docs/: FletImageEditor.md  index.md
examples/flet_image_editor_example/: pyproject.toml
examples/flet_image_editor_example/src/: main.py
examples/flet_image_editor_example/src/assets/: fonts.py
src/flet_image_editor/: flet_image_editor.py
src/flet_image_editor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_image_editor/: README.md
src/flutter/flet_image_editor/lib/src/: flet_image_editor.dart
src/flutter/flet_image_editor/lib/sticker_widget/src/: lindi_gesture_detector.dart  lindi_sticker_widget.dart
